// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-accordion default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    />
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion disabled and closed 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-disabled="true"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion disabled and open 1`] = `
<article
  class="m-accordion m--is-default m--is-open m--is-disabled m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-disabled="true"
    aria-expanded="true"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
    />
  </div>
   
  <div
    aria-labelledby="fakeId"
    class="m-accordion__body-wrap"
    id="fakeId-body-wrap"
  >
    <div
      class="m-accordion__body m--has-padding"
    >
       Some Accordion Content
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion empty $slots.default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
>
  <div
    aria-controls="fakeId-body-wrap"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <!---->
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion header 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        Value specified in header slot for this example and all others to follow
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--has-border m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion id 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="id123-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="id123"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion open 1`] = `
<article
  class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-expanded="true"
    aria-label="Cacher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
    />
  </div>
   
  <div
    aria-labelledby="fakeId"
    class="m-accordion__body-wrap"
    id="fakeId-body-wrap"
  >
    <div
      class="m-accordion__body m--has-padding"
    >
       Some Accordion Content
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion/icon-position="right" default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/icon-position="right" icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--has-border"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/icon-position="right" icon-size="small && icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--has-border"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/icon-position="right" icon-size="small" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/icon-size="small" default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/icon-size="small" icon-border="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--has-border m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/keepContentAlive default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/keepContentAlive keep-content-alive="true" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <div
    aria-labelledby="fakeId"
    class="m-accordion__body-wrap"
    id="fakeId-body-wrap"
    style="display: none;"
  >
    <div
      class="m-accordion__body m--has-padding"
    >
       Some Accordion Content
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion/padding default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/padding padding-body="false" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/padding padding-header="false" 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/skin dark 1`] = `
<article
  class="m-accordion m--is-dark m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/skin dark-b 1`] = `
<article
  class="m-accordion m--is-dark-b m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-light m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/skin default 1`] = `
<article
  class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/skin light 1`] = `
<article
  class="m-accordion m--is-light m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--has-border m--is-left"
    />
  </div>
   
  <!---->
</article>
`;

exports[`Storyshots modul-components|m-accordion/skin plain 1`] = `
<article
  class="m-accordion m--is-plain m--is-closed m--has-icon-left m--has-icon-large"
>
  <div
    aria-controls="fakeId-body-wrap"
    aria-label="Afficher le contenu"
    class="m-accordion__header m--has-padding"
    id="fakeId"
    role="button"
    tabindex="0"
  >
    <div
      class="m-accordion__header-content"
    >
      <h3
        class="m-u--no-margin"
      >
        An Accordion Title
      </h3>
    </div>
     
    <span
      aria-hidden="true"
      class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
    />
  </div>
   
  <!---->
</article>
`;
